# ChangeLog for www-apache/mod_auth_cookie_mysql2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_auth_cookie_mysql2/ChangeLog,v 1.4 2007/08/13 12:46:27 phreak Exp $

*mod_auth_cookie_mysql2-0.9a (13 Aug 2007)

  13 Aug 2007; Christian Heim <phreak@gentoo.org>
  +mod_auth_cookie_mysql2-0.9a.ebuild:
  Version bump, fixing #187732.

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org>
  mod_auth_cookie_mysql2-0.7.ebuild:
  Cleanup.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  mod_auth_cookie_mysql2-0.7.ebuild:
  dev-db/mysql => virtual/mysql

*mod_auth_cookie_mysql2-0.7 (13 Jun 2006)

  13 Jun 2006; Luca Longinotti <chtekk@gentoo.org>
  +files/55_mod_auth_cookie_mysql2.conf, +metadata.xml,
  +mod_auth_cookie_mysql2-0.7.ebuild:
  Initial import of ebuild for mod_auth_cookie_mysql2, fixes bug #136662.
  Thanks a lot to fenixrf@gmail.com for the initial ebuild and config.
