@@ -1,38 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 55_mod_auth_cookie_mysql2.conf 3428 RMD160 0c44674dd19498b551d600e6271fecff0ff37923 SHA1 69555d3d16d2e8c0074a50a94914164b04cb1cb3 SHA256 9b90a7d9736fbb9ec6af31b512a5097a3db32a6c07b5b706fae53fd77618365a
-MD5 687e588444b6a56a2153e9edf5903897 files/55_mod_auth_cookie_mysql2.conf 3428
-RMD160 0c44674dd19498b551d600e6271fecff0ff37923 files/55_mod_auth_cookie_mysql2.conf 3428
-SHA256 9b90a7d9736fbb9ec6af31b512a5097a3db32a6c07b5b706fae53fd77618365a files/55_mod_auth_cookie_mysql2.conf 3428
-DIST mod_auth_cookie_mysql2_0.7.tar.gz 7954 RMD160 216a2e14cf13e9c5f9913939649a4d7e7be9be7b SHA1 ddd6ef0c1f33bf9e133755a1dc6f6b66b09ed893 SHA256 f5aedec0b4873bce5eaf92d8b431ecfeb894dcfc75d148e42c5450abfc2989f5
+AUX 55_mod_auth_cookie_mysql2.conf 3277 RMD160 37a7f518c6fcb695dc18c48dfbd1fd7e326b6432 SHA1 782a27b25514447a2d26077a7fe19ac59ae63e43 SHA256 c73f29f2117832a370daeb70f7d10723e8ea4a9888e5054052b700f0bde309d3
+MD5 cd0ea0273f7031cfc1f475f6b3ffefd5 files/55_mod_auth_cookie_mysql2.conf 3277
+RMD160 37a7f518c6fcb695dc18c48dfbd1fd7e326b6432 files/55_mod_auth_cookie_mysql2.conf 3277
+SHA256 c73f29f2117832a370daeb70f7d10723e8ea4a9888e5054052b700f0bde309d3 files/55_mod_auth_cookie_mysql2.conf 3277
 DIST mod_auth_cookie_mysql2_0.9a.tar.gz 7592 RMD160 295708f76884be2c677be9361692a1c5a0fcbd5e SHA1 2c6bb328185a0f563556b5f795ecb915f2b5d8c6 SHA256 8a4c6f838d7e793b891096f23f9a76ffc13e3d4d2f3925676276bdc570b4840e
-EBUILD mod_auth_cookie_mysql2-0.7.ebuild 1195 RMD160 b0fa0cbeb7c48c99f15c9f2ff452237d76878e74 SHA1 b40daadfb4c9389e5c3d01f25e2e42c633b5b7dc SHA256 39a1e6ec70909603ec1fad952722cbe300062efbab4b97a3e15a6eebddcd585a
-MD5 2e9a4815b39ea9daa5d5b9d1444067e1 mod_auth_cookie_mysql2-0.7.ebuild 1195
-RMD160 b0fa0cbeb7c48c99f15c9f2ff452237d76878e74 mod_auth_cookie_mysql2-0.7.ebuild 1195
-SHA256 39a1e6ec70909603ec1fad952722cbe300062efbab4b97a3e15a6eebddcd585a mod_auth_cookie_mysql2-0.7.ebuild 1195
-EBUILD mod_auth_cookie_mysql2-0.9a.ebuild 1196 RMD160 1d362837b24140986d902176d787d47aaa2b1d74 SHA1 3ec41dd12e9bde9c665155ce492bece82698a455 SHA256 d635964033b3e2d85bd99d4784a93d7bc0db4ebec532b18b9860cfd9a349c9cc
-MD5 32bbf8b5fc346153cc6913a5c7c02c95 mod_auth_cookie_mysql2-0.9a.ebuild 1196
-RMD160 1d362837b24140986d902176d787d47aaa2b1d74 mod_auth_cookie_mysql2-0.9a.ebuild 1196
-SHA256 d635964033b3e2d85bd99d4784a93d7bc0db4ebec532b18b9860cfd9a349c9cc mod_auth_cookie_mysql2-0.9a.ebuild 1196
-MISC ChangeLog 958 RMD160 0bbe0e89d4833f8718de923858e82830ccd585d9 SHA1 ddd310d2ac23a141ea082acd8aa12972f1ffa8df SHA256 71105c183dbda0ea8a5b89446581ae6f152570d68b4b9a31f417d34070118d68
-MD5 f8b61aa4d75d1ea5d8a63622b075b103 ChangeLog 958
-RMD160 0bbe0e89d4833f8718de923858e82830ccd585d9 ChangeLog 958
-SHA256 71105c183dbda0ea8a5b89446581ae6f152570d68b4b9a31f417d34070118d68 ChangeLog 958
+EBUILD mod_auth_cookie_mysql2-0.9a.ebuild 1195 RMD160 10ca965c7672bd2a6adaa9e49a0b85623a98e764 SHA1 dd2532f51c7485479d023da3fe6ac6d773015fbe SHA256 341a9968732593e62f688664472190fc26508829c8b25f22de2eddb6b00ab979
+MD5 42740bcc35dea1d9fe30663fe02f8a5b mod_auth_cookie_mysql2-0.9a.ebuild 1195
+RMD160 10ca965c7672bd2a6adaa9e49a0b85623a98e764 mod_auth_cookie_mysql2-0.9a.ebuild 1195
+SHA256 341a9968732593e62f688664472190fc26508829c8b25f22de2eddb6b00ab979 mod_auth_cookie_mysql2-0.9a.ebuild 1195
+MISC ChangeLog 1170 RMD160 84cc6612194d0833294dfceccac4d1a0a8b95ff1 SHA1 e6702a494178ccddf9fd9ea3e4c05837cd7215f6 SHA256 6a65bea7cbb3198ff338617327a0c8d68678ce7a9f9a0e917a40aae9c5f923f7
+MD5 c4ffbf9315c53cadada783c282f6db28 ChangeLog 1170
+RMD160 84cc6612194d0833294dfceccac4d1a0a8b95ff1 ChangeLog 1170
+SHA256 6a65bea7cbb3198ff338617327a0c8d68678ce7a9f9a0e917a40aae9c5f923f7 ChangeLog 1170
 MISC metadata.xml 231 RMD160 a4a252abe4fb2922d19ccc4952d0128c3ccefbce SHA1 66b21c56c3a98e5a4b489dc000ff1d5956ab63d0 SHA256 79cc89f7b494dc5097d6dc5fedeb567e0dbc13e2adfcbe3f80082ad4625b38b3
 MD5 94cc9443fa6aead0b11dda55a10e117e metadata.xml 231
 RMD160 a4a252abe4fb2922d19ccc4952d0128c3ccefbce metadata.xml 231
 SHA256 79cc89f7b494dc5097d6dc5fedeb567e0dbc13e2adfcbe3f80082ad4625b38b3 metadata.xml 231
-MD5 2d32e183e6a72080473cca4b09abc2c4 files/digest-mod_auth_cookie_mysql2-0.7 274
-RMD160 e5196f1da580f4b68f18eb010ca8e2ea0f309f89 files/digest-mod_auth_cookie_mysql2-0.7 274
-SHA256 7743aae4344ffe81bd0502fc301761d0aa682514b135c0c25dacb1f4717ed936 files/digest-mod_auth_cookie_mysql2-0.7 274
 MD5 86119c9fb9c61e52915e5bd30a3a7161 files/digest-mod_auth_cookie_mysql2-0.9a 277
 RMD160 d76bbca1ca78414a89cbfaba97ea3c4c42025f4a files/digest-mod_auth_cookie_mysql2-0.9a 277
 SHA256 7db4b8e7a2add6c6c0d101f5a5fa80feba704934056214af82962c18b81d6393 files/digest-mod_auth_cookie_mysql2-0.9a 277
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.5 (GNU/Linux)
+Version: GnuPG v2.0.8 (GNU/Linux)
 
-iD8DBQFGwFK0yuNVb5qfaOYRAoNRAJ9YorVa2wXVW/AEhkFiV0CElqtvCQCeIUPQ
-3lz41Nu34VG2qCjgNL7ejZk=
-=B1wo
+iEYEARECAAYFAkefT3IACgkQmPFBzbX68WHZNwCdE5Dfl9yJr8TSgFWk9en7Rkts
+hiUAnjbZ4AmJ6w7f1xV7Fkf4yuryPF6X
+=GeC+
 -----END PGP SIGNATURE-----
