@@ -1,97 +1,95 @@
 <IfDefine AUTH_COOKIE_MYSQL2>
-	<IfModule !mod_auth_cookie_mysql2.c>
-		LoadModule auth_cookie_mysql2_module    modules/mod_auth_cookie_mysql2.so
-	</IfModule>
+LoadModule auth_cookie_mysql2_module modules/mod_auth_cookie_mysql2.so
+
+# MOD_AUTH_COOKIE_MYSQL Configuration section.
+# For more information look at the configuration section at
+# http://home.digithi.de/digithi/dev/mod_auth_cookie_mysql/#configuration
+
+# The MOD_AUTH_COOKIE_MYSQL2 directives must be inside of a <Directory>
+# block to work correctly!
+#<Directory "/var/www/localhost/">
+	# CookieAuth: Activates this module.
+	# REQUIRED: Yes
+	# Options: on|off
+	#CookieAuth
+
+	# CookieAuth_DBhost: Hostname or IP of the host where MySQL is running on.
+	# REQUIRED: Yes
+	# Options: <hostname or IP>
+	#CookieAuth_DBhost
+
+	# CookieAuth_DBName: Name of the MySQL database.
+	# REQUIRED: Yes
+	# Options: <dbname>
+	#CookieAuth_DBName
+
+	# CookieAuth_DBTable: Table name in database.
+	# REQUIRED: Yes
+	# Options: <tbname>
+	#CookieAuth_DBTable
+
+	# CookieAuth_DBUser: MySQL username with permissions to database and table.
+	# REQUIRED: Yes
+	# Options: <username>
+	#CookieAuth_DBUser
+
+	# CookieAuth_DBPassword: password for user in CookieAuth_DBUser.
+	# REQUIRED: Yes
+	# Options: <password>
+	#CookieAuth_DBPassword
+
+	# CookieAuth_UsernameField: Field in MySQL table where username of session is stored.
+	# This username is displayed as the "Remote Username" variable "REMOTE_USER" in Apache.
+	# REQUIRED: Yes
+	# Options: <fieldname>
+	#CookieAuth_UsernameField
+
+	# CookieAuth_SessnameField: Field in MySQL table where session name is stored. This is
+	# the name of the cookie!
+	# REQUIRED: Yes
+	# Options: <fieldname>
+	#CookieAuth_SessnameField
+
+	# CookieAuth_SessvalField: Field in MySQL table where session value (this is the value
+	# which is compared with the cookie value) is stored.
+	# REQUIRED: Yes
+	# Options: <fieldname>
+	#CookieAuth_SessvalField
+
+	# Cookie_Auth_CookieName: If this option is set, only the cookie with this name is searched.
+	# If it is not set, this module will search all cookies the browser sends and checks the name
+	# against the values in the field set with CookieAuth_SessvalField.
+	# REQUIRED: No
+	# Options: <name>
+	#CookieAuth_CookieName
+
+	# Cookie_Auth_ExpiryField: When this option is set, the current time of the webserver is
+	# compared against this field in the database. This value is in the format of a Unix
+	# timestamp (time in seconds since 01-01-1970)
+	# REQUIRED: No
+	# Options: <fieldname>
+	#CookieAuth_ExpiryField
+
+	# CookieAuth_RemoteIPField: When this option is set, the remote address of the connected
+	# client is checked against this field. Only when the remote IP and the stored IP are
+	# equal will the client be able to authorize.
+	# REQUIRED: No
+	# Options: <fieldname>
+	#CookieAuth_RemoteIPField
+
+	# CookieAuth_FailureURL: Normally, when the authorization fails the client gets an
+	# "AUTHORIZATION REQUIRED" message from the webserver. With this option set you can
+	# redirect the client to another URL.
+	#
+	# WARNING: This is a normal redirect for the browser. If you want an internal
+	#          redirect where the browser doesn't see the URL it's been redirected to
+	#          you should use the ErrorDocument directive. Example:
+	#          "ErrorDocument 401 /some_error.html"
+	#
+	# REQUIRED: No
+	# Options: <url>
+	#CookieAuth_FailureURL
+#</Directory>
 </IfDefine>
 
-<IfModule mod_auth_cookie_mysql2.c>
-	# MOD_AUTH_COOKIE_MYSQL Configuration section.
-	# For more information look at the configuration section at
-	# http://home.digithi.de/digithi/dev/mod_auth_cookie_mysql/#configuration
-
-	# The MOD_AUTH_COOKIE_MYSQL2 directives must be inside of a <Directory>
-	# block to work correctly!
-	#<Directory "/var/www/localhost/">
-		# CookieAuth: Activates this module.
-		# REQUIRED: Yes
-		# Options: on|off
-		#CookieAuth
-
-		# CookieAuth_DBhost: Hostname or IP of the host where MySQL is running on.
-		# REQUIRED: Yes
-		# Options: <hostname or IP>
-		#CookieAuth_DBhost
-
-		# CookieAuth_DBName: Name of the MySQL database.
-		# REQUIRED: Yes
-		# Options: <dbname>
-		#CookieAuth_DBName
-
-		# CookieAuth_DBTable: Table name in database.
-		# REQUIRED: Yes
-		# Options: <tbname>
-		#CookieAuth_DBTable
-
-		# CookieAuth_DBUser: MySQL username with permissions to database and table.
-		# REQUIRED: Yes
-		# Options: <username>
-		#CookieAuth_DBUser
-
-		# CookieAuth_DBPassword: password for user in CookieAuth_DBUser.
-		# REQUIRED: Yes
-		# Options: <password>
-		#CookieAuth_DBPassword
-
-		# CookieAuth_UsernameField: Field in MySQL table where username of session is stored.
-		# This username is displayed as the "Remote Username" variable "REMOTE_USER" in Apache.
-		# REQUIRED: Yes
-		# Options: <fieldname>
-		#CookieAuth_UsernameField
-
-		# CookieAuth_SessnameField: Field in MySQL table where session name is stored. This is
-		# the name of the cookie!
-		# REQUIRED: Yes
-		# Options: <fieldname>
-		#CookieAuth_SessnameField
-
-		# CookieAuth_SessvalField: Field in MySQL table where session value (this is the value
-		# which is compared with the cookie value) is stored.
-		# REQUIRED: Yes
-		# Options: <fieldname>
-		#CookieAuth_SessvalField
-
-		# Cookie_Auth_CookieName: If this option is set, only the cookie with this name is searched.
-		# If it is not set, this module will search all cookies the browser sends and checks the name
-		# against the values in the field set with CookieAuth_SessvalField.
-		# REQUIRED: No
-		# Options: <name>
-		#CookieAuth_CookieName
-
-		# Cookie_Auth_ExpiryField: When this option is set, the current time of the webserver is
-		# compared against this field in the database. This value is in the format of a Unix
-		# timestamp (time in seconds since 01-01-1970)
-		# REQUIRED: No
-		# Options: <fieldname>
-		#CookieAuth_ExpiryField
-
-		# CookieAuth_RemoteIPField: When this option is set, the remote address of the connected
-		# client is checked against this field. Only when the remote IP and the stored IP are
-		# equal will the client be able to authorize.
-		# REQUIRED: No
-		# Options: <fieldname>
-		#CookieAuth_RemoteIPField
-
-		# CookieAuth_FailureURL: Normally, when the authorization fails the client gets an
-		# "AUTHORIZATION REQUIRED" message from the webserver. With this option set you can
-		# redirect the client to another URL.
-		#
-		# WARNING: This is a normal redirect for the browser. If you want an internal
-		#          redirect where the browser doesn't see the URL it's been redirected to
-		#          you should use the ErrorDocument directive. Example:
-		#          "ErrorDocument 401 /some_error.html"
-		#
-		# REQUIRED: No
-		# Options: <url>
-		#CookieAuth_FailureURL
-	#</Directory>
-</IfModule>
+# vim: ts=4 filetype=apache
