@@ -1,3 +1,0 @@
-MD5 cb2869d2bff22f99d48bea11004a18eb mod_auth_cookie_mysql2_0.7.tar.gz 7954
-RMD160 216a2e14cf13e9c5f9913939649a4d7e7be9be7b mod_auth_cookie_mysql2_0.7.tar.gz 7954
-SHA256 f5aedec0b4873bce5eaf92d8b431ecfeb894dcfc75d148e42c5450abfc2989f5 mod_auth_cookie_mysql2_0.7.tar.gz 7954
