@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_auth_cookie_mysql2/mod_auth_cookie_mysql2-0.9a.ebuild,v 1.1 2007/08/13 12:46:27 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_auth_cookie_mysql2/mod_auth_cookie_mysql2-0.9a.ebuild,v 1.2 2008/01/29 16:08:00 hollow Exp $
 
 inherit eutils apache-module
 
@@ -32,7 +32,7 @@ pkg_postinst() {
 	ewarn "There are a number of variables that need to be configured before"
 	ewarn "MOD_AUTH_COOKIE_MYSQL2 can work. After this package has finished"
 	ewarn "building, please go and modify the configuration file located at"
-	ewarn "${APACHE2_MODULES_CONFDIR}/$(basename ${APACHE2_MOD_CONF}).conf"
+	ewarn "${APACHE_MODULES_CONFDIR}/$(basename ${APACHE2_MOD_CONF}).conf"
 	ewarn
 	ebeep 5
 	apache-module_pkg_postinst
