@@ -6,14 +6,14 @@ MD5 ff5df6622bab6134e54c29bb2f4cb177 files/80_mod_auth_pgsql.conf 118
 RMD160 9ae3a7d74006e64e0bce0735666eb3c835258756 files/80_mod_auth_pgsql.conf 118
 SHA256 8d1de1b294a10837f585402bc0131c56f741afa197caeb8fd3bfca43f4e3f0ea files/80_mod_auth_pgsql.conf 118
 DIST mod_auth_pgsql-2.0.3.tar.gz 15474 RMD160 f77194dcb63c57c75413495ce316d392f6e74a2f SHA1 1c9d04373b3196b8a4cf64527a824a8c29b38582 SHA256 51651609d742e21bbc587fd4951b41a39deda53262cbf931b9b40bdda3b5cb92
-EBUILD mod_auth_pgsql-2.0.3-r1.ebuild 965 RMD160 0c31249b187823421b66a134972063c5d558b03e SHA1 a901569e6d06149158ada153aa8d2b3556883326 SHA256 89ede923e9f1641e7c6b1e34330c2dd559fda0b7cce0ad27f5f3c639adf8cc42
-MD5 99a3238b78ae19da1f15f1c940713384 mod_auth_pgsql-2.0.3-r1.ebuild 965
-RMD160 0c31249b187823421b66a134972063c5d558b03e mod_auth_pgsql-2.0.3-r1.ebuild 965
-SHA256 89ede923e9f1641e7c6b1e34330c2dd559fda0b7cce0ad27f5f3c639adf8cc42 mod_auth_pgsql-2.0.3-r1.ebuild 965
-MISC ChangeLog 5245 RMD160 a3c7a81037324d66fe9d8c2b4ac35a85ca9ea434 SHA1 1dac96d1139ce50c7de791ec8dc31c63cc6a2d1d SHA256 f619b0d6a8ee6d39d811f4fbf6ef1e9926e1d55a23a9b30f86e75f7fc9aeea4d
-MD5 1074d3f814bee6fdbfde425364bff153 ChangeLog 5245
-RMD160 a3c7a81037324d66fe9d8c2b4ac35a85ca9ea434 ChangeLog 5245
-SHA256 f619b0d6a8ee6d39d811f4fbf6ef1e9926e1d55a23a9b30f86e75f7fc9aeea4d ChangeLog 5245
+EBUILD mod_auth_pgsql-2.0.3-r1.ebuild 964 RMD160 224ca79ee3bb93f0d24f343679678a78b81c7fff SHA1 6f2251b4430d0058d1e0e4f9f5f29135ee2568a0 SHA256 eee34695454731570c807139b6ee5908c722fc9807857cd0e2beea861d43d2e8
+MD5 7d9dea8c621c770edf151147c451ee6e mod_auth_pgsql-2.0.3-r1.ebuild 964
+RMD160 224ca79ee3bb93f0d24f343679678a78b81c7fff mod_auth_pgsql-2.0.3-r1.ebuild 964
+SHA256 eee34695454731570c807139b6ee5908c722fc9807857cd0e2beea861d43d2e8 mod_auth_pgsql-2.0.3-r1.ebuild 964
+MISC ChangeLog 5368 RMD160 a06f0258d95be6ca194fec8e1459ade1a9084596 SHA1 dee8a1306efac579a874ca5360b697029db192e0 SHA256 9074a35231549c1a601141fe7a522dd5bc259c10d8e464fc127fd4994e7169fa
+MD5 076096f27b61ae7ae2b9a029c12b57db ChangeLog 5368
+RMD160 a06f0258d95be6ca194fec8e1459ade1a9084596 ChangeLog 5368
+SHA256 9074a35231549c1a601141fe7a522dd5bc259c10d8e464fc127fd4994e7169fa ChangeLog 5368
 MISC metadata.xml 185 RMD160 b351f7f365e293d8e8c88a175c5cdc7ff7ae0a13 SHA1 f64cb0eabd5be44d9edcd48a618d32355c57207b SHA256 b4f1db65a4b86b2eca60b7c741a222b2c1364656949c39125ce5fdf3a299ac4b
 MD5 d97b50c0cd1006ebe4f482d82203b99f metadata.xml 185
 RMD160 b351f7f365e293d8e8c88a175c5cdc7ff7ae0a13 metadata.xml 185
@@ -24,7 +24,7 @@ SHA256 8d0b043313f385f1b86c278ed5667de1c19e1b42f1cb9aaff7a9635460dd9663 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (GNU/Linux)
 
-iEYEARECAAYFAkec1lgACgkQmPFBzbX68WHCkQCfXLcqATbsaRtJceRCvBWfA+43
-nfkAnjPhH0alUeHN5RGFXnGbGmZTMXnj
-=jeJU
+iEYEARECAAYFAkefUHEACgkQmPFBzbX68WGJfQCgjDtQe1r5MYRAxsPYrSGEMAsp
+M6MAoJO6pZJvEFcBfK10cHN5PlaULgR9
+=phnF
 -----END PGP SIGNATURE-----
