@@ -1,6 +1,11 @@
 # ChangeLog for www-apache/mod_auth_cookie_mysql2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_auth_cookie_mysql2/ChangeLog,v 1.4 2007/08/13 12:46:27 phreak Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_auth_cookie_mysql2/ChangeLog,v 1.5 2008/01/29 16:08:00 hollow Exp $
+
+  29 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
+  files/55_mod_auth_cookie_mysql2.conf, -mod_auth_cookie_mysql2-0.7.ebuild,
+  mod_auth_cookie_mysql2-0.9a.ebuild:
+  fix depend.apache usage wrt #208033; cleanup
 
 *mod_auth_cookie_mysql2-0.9a (13 Aug 2007)
 
